Port OreSpawn 4.0.6 to Minecraft 1.16.5